--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,5 @@
 <head>
+	<meta name="google-adsense-account" content="ca-pub-7959545138471788">
 	{{ template "_internal/google_analytics.html" . }}
 	{{ template "_internal/google_analytics_async.html" . }}
 </head>
