meta tag headers

--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -15,6 +15,7 @@
 
 	<!-- META -->
 	{{ partial "head/meta.html" . }}
+	<meta name="google-adsense-account" content="ca-pub-7959545138471788">
 
 	<!-- CSS stylesheets -->
 	{{ partial "head/stylesheets.html" . }}
