add project descriptions

--- a/layouts/projects/list.html
+++ b/layouts/projects/list.html
@@ -4,7 +4,7 @@
 	{{ range .Pages }}
 	<li>
 		<span class="title">
-			<a href="{{ .RelPermalink }}">{{ .Title }}</a>
+			<a href="{{ .RelPermalink }}">{{ .Title }}</a> &nbsp; &nbsp;.................. <span> {{.Date}} </span>
 		</span>
 	</li>
 	{{ end }}
