--- a/layouts/projects/list.html
+++ b/layouts/projects/list.html
@@ -1,10 +1,11 @@
-{{ define "main" }}
-<h1 class="title">personal projects that I haven't completed yet!!!</h1>
-<ul class="projects-list">
+{{ define "main" -}}
+<h1 class="title">{{ .Title }}</h1>
+<ul class="entries">
 	{{ range .Pages }}
-	<li class="project-summary">
-		<h3><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
-		{{ .Summary }}
+	<li>
+		<span class="title">
+			<a href="{{ .RelPermalink }}">{{ .Title }}</a>
+		</span>
 	</li>
 	{{ end }}
 </ul>
